Fixed HAL device removing.

BUG: 108229

svn path=/branches/stable/extragear/multimedia/k3b/; revision=430473